<package format="2">
  <name>haptic_control</name>
  <version>1.0.0</version>
  <description>
    <p>ROS wrapper for Force Dimension SDK</p>
  </description>
  <author>Kyle W Schultz</author>
  <maintainer email="kylews@uw.edu" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>
